--- a/frontend/pages/generate/reselect/diarytemplate/diarytemplate.wxss
+++ b/frontend/pages/generate/reselect/diarytemplate/diarytemplate.wxss
@@ -2,36 +2,18 @@
 
 @import "/pages/generate/generate.wxss";
 
-.sub-nav{
-  position: absolute;
-  left: -10vw;
-  top: -3vh;
-  margin: 0;
-}
-
-.diary-input{
-  position: absolute;
-  top:3vh;
-  right: 5vw;
-  margin: 0;
-}
-
-.submit{
-  display: block; 
-  box-sizing: border-box; 
-  position: absolute;
-  width: 20vw !important;
-  height: 4vh;
-  right: 5vw;
-  top: 12vh;
-}
 
 .container{
-  width: 100%;
-  height:100vh;
-  position: absolute;
-  top: 5vh;
-  left: -5vw;
-  overflow: hidden;
+  margin: 0;
+  margin-top: 5vh;
+  padding: 0;
 }
+
+.item-container{
+  position: absolute;
+  margin-top: 28vh;
+}
+
+
+
 
