--- a/frontend/pages/generate/timeline/timeline.wxml
+++ b/frontend/pages/generate/timeline/timeline.wxml
@@ -1,23 +1,39 @@
-<!--pages/generate/timeline/timeline.wxml-->
+<!-- pages/generate/timeline/timeline.wxml -->
 <view class="ec-container">
-  <ec-canvas canvas-id="echart" id="echart" style="height: 800px"
-   ec="{{ec}}"></ec-canvas>
-  <!-- <image src="{{imgPath}}" hidden="{{! hasImg}}"></image> -->
+  <view>
+    <ec-canvas canvas-id="echart" id="echart" style="height: 1000px;" ec="{{ec}}"></ec-canvas>
+  </view>
+  <image src="{{imgPath}}" hidden="{{! hasImg}}"></image> 
+  <view hidden="{{! hasImg}}">testing content</view>
 </view>
 
 <view class="container_components">
-  <view class="container_template">
+  <view class='custom-tabbar'>
+  <view class='icons'>
+    <image src="/image/preview/gallery.png" style="height: 6vh; width: 6vh" bind:tap="reselectEvent"></image>
+    <image src="/image/preview/template.png" style="height: 6vh; width: 6vh" bind:tap="reselectTemplate"></image>
+    <image src="/image/preview/download.png" style="height: 6vh; width: 6vh" bind:tap="handleSave"></image>
+    <image src="/image/preview/share.png" style="height: 6vh; width: 6vh" bind:tap="handleShare"></image>
+  </view>
+  <view class='icons-text'>
+    <text bind:tap="reselectEvent">更换事件</text>
+    <text bind:tap="reselectTemplate">更换模板</text>
+    <text bind:tap="handleDownload">保存到本地</text>
+    <text bind:tap="handleShare">分享</text>
+  </view>
+</view>
+  <!-- <view class="container_template animation">
     <view wx:for="{{templates}}" wx:key="index" data-index='{{index}}' class="template {{item.selected ?     'selected' : ''}}" bindtap="changeTemplate">
       <image class="timeline-image" src="{{host_}}static/frontend/timeline/timeline_{{item.id}}.jpg"></image>
     </view>
   </view>
 
-  <view class="container_template" id="container_color">
+  <view class="container_template animation" id="container_color">
     <view wx:for="{{colorSet}}" wx:key="index" data-index='{{index}}' class="color {{item.selected ?     'selected' : ''}}" bindtap="changeColor">
       <image class="color-image" src="{{host_}}/static/frontend/timeline/color/color_{{index}}.png"></image>
     </view>
   </view>
-  <button class="submit" bindtap="handleSave">导出</button>
+  <button class="submit animation" bindtap="handleSave">导出</button> -->
 </view>
 <!-- <view class="ec-container">
     <ec-canvas canvas-id="echart" id="echart" ec="{{ec}}"></ec-canvas>
