--- a/frontend/pages/show/event_detail/event_detail.wxss
+++ b/frontend/pages/show/event_detail/event_detail.wxss
@@ -82,13 +82,25 @@
   white-space: pre-line;
 }
 
-.tags-container{
+.children-tag-container{
   width: 100%;
-  height: 100%;
-  /* border: 1px solid #000; */
-  color: rgb(27,52,113);
   font-size: 1.1em;
   margin-top: 2vh;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.children-container{
+  display: inline-block;
+  color: rgb(53, 30, 56);
+}
+
+.tags-container{
+  /* border: 1px solid #000; */
+  margin-left: 2vw;
+  display: inline-block;
+  color: rgb(27,52,113);
 }
 
 .date-delete-container{
