--- a/frontend/pages/user/user.wxss
+++ b/frontend/pages/user/user.wxss
@@ -100,6 +100,8 @@ page {
   /* margin-top: 50px; */
   /* margin-left: 60px; */
   width: 30px;
+  padding-left: 0.5vh;
+  padding-right: 0.5vh;
   /* height: 23px; */
   background: #f0f8ff;
   border: 1rpx solid #4095E5;
