--- a/frontend/pages/generate/add_event/add_event.wxml
+++ b/frontend/pages/generate/add_event/add_event.wxml
@@ -42,5 +42,23 @@
 			<view class="weui-toast__content">正在加载</view>
 		</view>
 	</view>
+  <view wx:if="{{dialog}}" aria-role="dialog" aria-modal="true" aria-labelledby="js_dialog1_title">
+        <view class="weui-mask {{dialog ? 'weui-animate_fade-in' : 'weui-animate_fade-out'}}" bindtap="close"></view>
+        <view class="weui-half-screen-dialog {{dialog ? 'weui-animate_slide-up' : 'weui-animate_slide-down'}}">
+            <view class="weui-half-screen-dialog__hd">
+                <view class="weui-half-screen-dialog__hd__side">
+                    <view aria-role="button" class="weui-btn_icon weui-wa-hotarea" bindtap="close">关闭<i class="weui-icon-close-thin"></i></view>
+                    <view style="display: none;" aria-role="button" class="weui-icon-btn weui-icon-btn_close" bindtap="close">关闭</view>
+                </view>
+                <view class="weui-half-screen-dialog__hd__main">
+                    <strong class="weui-half-screen-dialog__title" id="js_dialog1_title">标题</strong>
+                    <view class="weui-half-screen-dialog__subtitle">标题</view>
+                </view>
+            </view>
+            <view class="weui-half-screen-dialog__bd" style="padding-top: 32px; height: 50px;">
+                可放自定义内容
+            </view>
+        </view>
+    </view>
 
 
