--- a/frontend/pages/generate/add_event/add_event.wxml
+++ b/frontend/pages/generate/add_event/add_event.wxml
@@ -33,7 +33,7 @@
   </view>
 </view>
 
-<view aria-role="alert" class="fadeIn {{hideLoading ? 'fadeOut' : ''}}" wx:if="{{loading}}">
+<!-- <view aria-role="alert" class="fadeIn {{hideLoading ? 'fadeOut' : ''}}" wx:if="{{loading}}">
 		<view class="weui-mask_transparent"></view>
 		<view class="weui-toast">
 			<view class="weui-primary-loading weui-primary-loading_transparent weui-icon_toast">
@@ -41,7 +41,8 @@
       </view>
 			<view class="weui-toast__content">正在加载</view>
 		</view>
-	</view>
+	</view> -->
+  
   <view wx:if="{{dialog}}" aria-role="dialog" aria-modal="true" aria-labelledby="js_dialog1_title">
         <view class="weui-mask {{dialog ? 'weui-animate_fade-in' : 'weui-animate_fade-out'}}" bindtap="close"></view>
         <view class="weui-half-screen-dialog {{dialog ? 'weui-animate_slide-up' : 'weui-animate_slide-down'}}">
@@ -51,13 +52,32 @@
                     <view style="display: none;" aria-role="button" class="weui-icon-btn weui-icon-btn_close" bindtap="close">关闭</view>
                 </view>
                 <view class="weui-half-screen-dialog__hd__main">
-                    <strong class="weui-half-screen-dialog__title" id="js_dialog1_title">标题</strong>
-                    <view class="weui-half-screen-dialog__subtitle">标题</view>
+                    <strong class="weui-half-screen-dialog__title" id="js_dialog1_title">生成进度</strong>
+                    <!-- <view class="weui-half-screen-dialog__subtitle">标题</view> -->
                 </view>
             </view>
-            <view class="weui-half-screen-dialog__bd" style="padding-top: 32px; height: 50px;">
+            <!-- <view class="weui-half-screen-dialog__bd" style="padding-top: 12px; height: 10px;">
                 可放自定义内容
-            </view>
+            </view> -->
+           
+            <view class="page__bd">
+		<view class="weui-loadmore" aria-role="alert">
+			<text aria-hidden="true" aria-label="正在加载" class="weui-primary-loading" aria-role="img">
+				<text class="weui-primary-loading__dot"></text>
+			</text>
+			<text class="weui-loadmore__tips">视频正在加载</text>
+		</view>
+    </view>
+		<view class="weui-progress" style="margin-top: 2vh;">
+			<view class="weui-progress__bar">
+				<view class="weui-progress__inner-bar js_progress" style="width: {{percent}};"></view>
+			</view>
+			<!-- <navigator class="weui-wa-hotarea weui-progress__opr" aria-role="button" url="javascript:">
+				<text aria-label="取消" class="weui-icon-cancel" aria-role="img"></text>
+			</navigator> -->
+			<text id="js_current" class="weui-hidden_abs" aria-role="alert">50%</text>
+		</view>
+		
         </view>
     </view>
 
