--- a/frontend/pages/generate/generate.wxml
+++ b/frontend/pages/generate/generate.wxml
@@ -10,31 +10,10 @@
   <!-- <text class="tag-text">{{activeIndex}}</text> -->
   <block wx:if="{{activeIndex==0}}">
     <!-- 时间轴 -->
-    <!-- <view class="timeline-list">
-      <block wx:for="{{timelineList}}" wx:key="index">
-        <view class="timeline-item"  data-category="timeline" data-index="{{index}}" bindtap="addEvent">
-          <image class="timeline-image" src="{{host_}}/static/frontend/timeline/timeline_{{index}}.jpg"></image>
-        </view>
-      </block>
-    </view> -->
     <view class="weui-form__control-area">
       <view class="weui-cells__group weui-cells__group_form">
 				<view class="weui-cells__title">时间轴信息</view>
 				<view class="weui-cells weui-cells_form">
-					
-					<!-- <view class="weui-cell weui-cell_active">
-						<view class="weui-cell__hd"><label class="weui-label">标题</label></view>
-						<view class="weui-cell__bd weui-flex">
-							<input
-                  class="weui-input"
-                  type="text"
-                  placeholder="请输入标题（最长16位）"
-                  placeholder-class="weui-input__placeholder"
-                  bindinput="handleInputTimelineTitle"
-                  id="timelineTitleBar"
-              />
-						</view>
-					</view> -->
       
 					<view class="weui-cell weui-cell_active weui-cell_disabled">
 						<view class="weui-cell__hd">
@@ -74,7 +53,7 @@
             </view>
           </block>
         </view>
-        <button bind:tap="addEvent" data-category="timeline">生成</button>
+        <button bind:tap="addEvent" data-category="timeline">修改</button>
     </view>
   </block>
   <block wx:if="{{activeIndex==1}}">
