--- a/frontend/pages/generate/reselect/timelineInfo/timelineInfo.wxml
+++ b/frontend/pages/generate/reselect/timelineInfo/timelineInfo.wxml
@@ -1,2 +1,50 @@
 <!--pages/generate/reselect/timelineInfo.wxml-->
-<text>pages/generate/reselect/timelineInfo.wxml</text>
+<block>
+    <!-- 时间轴 -->
+    <view class="weui-form__control-area">
+      <view class="weui-cells__group weui-cells__group_form">
+				<view class="weui-cells__title">时间轴信息</view>
+				<view class="weui-cells weui-cells_form">
+      
+					<view class="weui-cell weui-cell_active weui-cell_disabled">
+						<view class="weui-cell__hd">
+                            <label class="weui-label">模板</label>
+                        </view>
+						<view class="weui-cell__bd">
+							<input class="weui-input" placeholder="请输入微信号" value="{{timelineList[templateSelected].name}}" disabled />
+						</view>
+				</view>
+				</view>
+			</view>
+      
+    </view>
+    <view class="audio-btn-container">
+        <view class="weui-cells__title" style="margin-top: 0; margin-bottom: 3vh;">滑动选择模板与色系</view>
+        <view class="line"></view>
+        <!-- 模板选择区域 -->
+        <view class="audio-list">
+          <block wx:for="{{timelineList}}" wx:key="index">
+            <view class="timeline-item audio-item"  data-category="timeline" data-index="{{index}}" bindtap="selectTemplate">
+              <image class="audio-image {{item.id==templateSelected? 'selected' : ''}}" 
+              src="{{host_}}static/frontend/timeline/timeline_{{item.id}}.jpg" style="width: 50vw;"></image>
+              <image class="select-icon  {{item.id==templateSelected ? 'selected' : ''}}" src="/image/generate/check-circle.png"></image>
+              <text class="timeline-name">{{item.name}}</text>
+            </view>
+          </block>
+        </view>
+        <!-- 颜色选择区域 -->
+        <view class="line"></view>
+        <view class="audio-list" style="height: 20vh;">
+          <block wx:for="{{colorList}}" wx:key="index">
+            <view class="timeline-item audio-item"  data-category="timeline" data-index="{{index}}" bindtap="selectColor">
+              <image class="audio-image {{item.id==colorSelected? 'selected' : ''}}" 
+              src="{{host_}}static/frontend/timeline/color/color_{{item.id}}.png" style="width: 30vw; height: 10vh;"></image>
+              <image class="select-icon  {{item.id==colorSelected ? 'selected' : ''}}" src="/image/generate/check-circle.png"></image>
+              <text class="timeline-name">{{item.name}}</text>
+            </view>
+          </block>
+        </view>
+        <view style="height: 3vh;"></view>
+        <button bind:tap="changeInfo" data-category="timeline">生成</button>
+    </view>
+  </block>
