--- a/frontend/pages/plan/create_plan/create_plan.wxss
+++ b/frontend/pages/plan/create_plan/create_plan.wxss
@@ -1,7 +1,7 @@
 /* pages/show/event/event.wxss */
 .whole-page-grid{
   display: grid;
-  grid-template-rows: 25vh 10vh 1fr 10vh 10vh;
+  grid-template-rows: 25vh 12vh 1fr 10vh 10vh;
   grid-template-columns: 1fr;
   grid-template-areas:
   "A"
@@ -16,7 +16,7 @@
 
 .overall-outfit{
   padding: 20rpx;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .container_1 {
@@ -91,12 +91,17 @@
   flex-wrap: wrap;
   align-items: center; /* 标签垂直居中对齐 */
   gap: 8px; /* 标签之间的间距 */
-  margin-left: var(--weui-cellMarginLR);
-  margin-right: var(--weui-cellMarginLR);
+  width: 82%;
+  margin-left: 9%;
+  margin-right: 9%;
+  /* margin-left: var(--weui-cellMarginLR); */
+  /* margin-right: var(--weui-cellMarginLR); */
 }
 
 .tag {
-  height: 15px;
+  
+  display: inline-block;
+  height: 5vw;
   padding: 4px 8px;
   border-radius: 4px;
   background: #f0f8ff;
@@ -106,8 +111,7 @@
   text-align: center;
   color: #4095E5;
   cursor: pointer;
-  margin-left: 1vh;
-  margin-right: 1vh;
+  white-space: nowrap; 
 }
 
 .tag.selected {
@@ -121,7 +125,7 @@
 }
 
 .checkbox-container {
-  margin-left: 4px;
+  /* margin-left: 4px; */
 }
 
 .add-tag {
@@ -191,11 +195,11 @@
   font-size: 14px;
 }
 .icon-container {
-  margin-top: 4vh;
+  margin-top: 2vh;
   display: flex;
   flex-wrap: wrap;
-  margin-left: 1vh;
-  margin-right: 1vh;
+  /* margin-left: 1vh; */
+  /* margin-right: 1vh; */
   width: 100%;
 }
 
