--- a/frontend/pages/plan/todo/todo.wxss
+++ b/frontend/pages/plan/todo/todo.wxss
@@ -123,6 +123,7 @@
 }
 
 .todo-item {
+  position: relative;
   padding: 2vh;
   display: flex;
   flex-direction: row;
@@ -154,6 +155,7 @@
   color: #494955;
   /* font-size: 15px; */
   font-size: 2vh;
+  /* line-height: 1vh; */
 }
 
 .line {
