--- a/frontend/pages/generate/preview/preview_video/preview_video.wxml
+++ b/frontend/pages/generate/preview/preview_video/preview_video.wxml
@@ -10,7 +10,7 @@
 </view>
 
 <view class='custom-tabbar'>
-  <view class='icons'>
+  <!-- <view class='icons'>
     <image src="/image/preview/gallery.png" style="height: 6vh; width: 6vh" bind:tap="reselectEvent"></image>
     <image src="/image/preview/template.png" style="height: 6vh; width: 6vh" bind:tap="reselectVideoInfo"></image>
     <image src="/image/preview/download.png" style="height: 6vh; width: 6vh" bind:tap="handleDownload"></image>
@@ -21,5 +21,21 @@
     <text bind:tap="reselectVideoInfo">更换信息</text>
     <text bind:tap="handleDownload">保存到本地</text>
     <text bind:tap="handleShare">分享</text>
-  </view>
+  </view> -->
+  <button class="action-item">
+    <image src="/image/preview/gallery.png" style="height: 6vh; width: 6vh" bind:tap="reselectEvent"></image>
+    <text class="icons-text" bind:tap="reselectEvent">更换事件</text>
+  </button>
+  <button class="action-item">
+    <image src="/image/preview/template.png" style="height: 6vh; width: 6vh" bind:tap="reselectVideoInfo"></image>
+    <text class="icons-text" bind:tap="reselectVideoInfo">更换信息</text>
+  </button>
+  <button class="action-item">
+    <image src="/image/preview/download.png" style="height: 6vh; width: 6vh" bind:tap="handleDownload"></image>
+    <text class="icons-text" bind:tap="handleDownload">保存到本地</text>
+  </button>
+  <button class="action-item" open-type="share">
+    <image src="/image/preview/share.png" style="height: 6vh; width: 6vh" bind:tap="handleShare"></image>
+    <text class="icons-text" bind:tap="handleShare">分享</text>
+  </button>
 </view>
