--- a/frontend/pages/generate/preview/preview_video/preview_video.wxss
+++ b/frontend/pages/generate/preview/preview_video/preview_video.wxss
@@ -13,8 +13,9 @@
 }
 
 .custom-tabbar{
+  padding-bottom: 1vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   position: relative;
   margin-top: 20vh;
   /* bottom: 0vh; */
@@ -27,6 +28,16 @@
   /* box-shadow: 2px 2px 6px rgb(141, 137, 137); */
   border-radius: 2vh;
   backdrop-filter: blur(10px);
+}
+.action-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  background: none;
+  padding: 0;
+  font-size: 28rpx;
 }
 
 .title {
@@ -48,13 +59,13 @@
 
 .icons-text {
   font-size: 1.3vh;
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   margin-left: 9.5%;
   width: 77%;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 1vh;
+  margin-bottom: 1vh; */
 }
 
 .selected-text{
