--- a/frontend/pages/user/child/child_detail/child_detail.wxml
+++ b/frontend/pages/user/child/child_detail/child_detail.wxml
@@ -1,15 +1,65 @@
 <!--pages/user/child/child_detail/child_detail.wxml-->
 
+<view class="weui-form__control-area">
+  <view class="weui-cells__group weui-cells__group_form">
+    <view class="weui-cells weui-cells_form">
+      <view class="weui-cell weui-cell_active">
+        这里是关于{{name}}的一切~
+      </view>
+    </view>
+  </view>
+</view>
+
+<view class="weui-form__control-area" style="margin-top: -2vh;margin-bottom: 1vh;">
+  <view class="weui-cells__group weui-cells__group_form">
+    <view class="weui-cells weui-cells_form">
+      <view class="weui-cell weui-cell_active">
+        计划标签
+      </view>
+    </view>
+  </view>
+</view>
+
 <view class="ec-container">
-     <ec-canvas canvas-id="echart" ec="{{ec_radar}}"></ec-canvas>
+  <ec-canvas canvas-id="echart" ec="{{ec_radar}}"></ec-canvas>
+</view>
+
+<view class="weui-form__control-area" style="margin-top: -2vh;margin-bottom: 1vh;">
+  <view class="weui-cells__group weui-cells__group_form">
+    <view class="weui-cells weui-cells_form">
+      <view class="weui-cell weui-cell_active">
+        事件标签
+      </view>
+    </view>
+  </view>
 </view>
 
 <view class="ec-container">
      <ec-canvas canvas-id="echart" ec="{{ec_tag1}}"></ec-canvas>
 </view>
 
+<view class="weui-form__control-area" style="margin-top: -4vh;margin-bottom: 1vh;">
+  <view class="weui-cells__group weui-cells__group_form">
+    <view class="weui-cells weui-cells_form">
+      <view class="weui-cell weui-cell_active">
+        事件标签数量
+      </view>
+    </view>
+  </view>
+</view>
+
 <view class="ec-container_2">
      <ec-canvas canvas-id="echart" ec="{{ec_event}}"></ec-canvas>
+</view>
+
+<view class="weui-form__control-area" style="margin-top: 1vh;margin-bottom: 1vh;">
+  <view class="weui-cells__group weui-cells__group_form">
+    <view class="weui-cells weui-cells_form">
+      <view class="weui-cell weui-cell_active">
+        事件时间轴
+      </view>
+    </view>
+  </view>
 </view>
 
 <view class="ec-container_2">
