--- a/frontend/pages/user/child/child_detail/child_detail.wxml
+++ b/frontend/pages/user/child/child_detail/child_detail.wxml
@@ -21,7 +21,8 @@
 </view>
 
 <view class="ec-container">
-  <ec-canvas canvas-id="echart" ec="{{ec_radar}}"></ec-canvas>
+  <ec-canvas canvas-id="echart" ec="{{ec_radar}}" style="{{plans ? '' : 'display: none;'}}"></ec-canvas>
+  <view class="weui-cell weui-cell_active" style="{{plans ? 'display: none;' : ''}}">还没有添加过计划哦</view>
 </view>
 
 <view class="weui-form__control-area" style="margin-top: -2vh;margin-bottom: 1vh;">
@@ -35,7 +36,8 @@
 </view>
 
 <view class="ec-container">
-     <ec-canvas canvas-id="echart" ec="{{ec_tag1}}"></ec-canvas>
+     <ec-canvas canvas-id="echart" ec="{{ec_tag1}}" style="{{events ? '' : 'display: none;'}}"></ec-canvas>
+     <view class="weui-cell weui-cell_active" style="{{events ? 'display: none;' : ''}}">还没有添加过事件哦</view>
 </view>
 
 <view class="weui-form__control-area" style="margin-top: -4vh;margin-bottom: 1vh;">
@@ -49,7 +51,8 @@
 </view>
 
 <view class="ec-container_2">
-     <ec-canvas canvas-id="echart" ec="{{ec_event}}"></ec-canvas>
+     <ec-canvas canvas-id="echart" ec="{{ec_event}}" style="{{events ? '' : 'display: none;'}}"></ec-canvas>
+     <view class="weui-cell weui-cell_active" style="{{events ? 'display: none;' : ''}}">还没有添加过事件哦</view>
 </view>
 
 <view class="weui-form__control-area" style="margin-top: 1vh;margin-bottom: 1vh;">
@@ -63,5 +66,6 @@
 </view>
 
 <view class="ec-container_2">
-     <ec-canvas canvas-id="echart" ec="{{ec_tag2}}"></ec-canvas>
+     <ec-canvas canvas-id="echart" ec="{{ec_tag2}}" style="{{events ? '' : 'display: none;'}}"></ec-canvas>
+     <view class="weui-cell weui-cell_active" style="{{events ? 'display: none;' : ''}}">还没有添加过事件哦</view>
 </view>
