--- a/frontend/pages/user/child/child_detail/child_detail.wxml
+++ b/frontend/pages/user/child/child_detail/child_detail.wxml
@@ -21,7 +21,7 @@
 </view>
 
 <view class="ec-container">
-  <ec-canvas canvas-id="echart" ec="{{ec_radar}}" style="{{plans ? '' : 'display: none;'}}"></ec-canvas>
+  <ec-canvas canvas-id="echart" ec="{{ec_radar}}" ></ec-canvas>
   <view class="weui-cell weui-cell_active" style="{{plans ? 'display: none;' : ''}}">还没有添加过计划哦</view>
 </view>
 
@@ -36,7 +36,7 @@
 </view>
 
 <view class="ec-container">
-     <ec-canvas canvas-id="echart" ec="{{ec_tag1}}" style="{{events ? '' : 'display: none;'}}"></ec-canvas>
+     <ec-canvas canvas-id="echart" ec="{{ec_tag1}}" ></ec-canvas>
      <view class="weui-cell weui-cell_active" style="{{events ? 'display: none;' : ''}}">还没有添加过事件哦</view>
 </view>
 
@@ -51,7 +51,7 @@
 </view>
 
 <view class="ec-container_2">
-     <ec-canvas canvas-id="echart" ec="{{ec_event}}" style="{{events ? '' : 'display: none;'}}"></ec-canvas>
+     <ec-canvas canvas-id="echart" ec="{{ec_event}}"></ec-canvas>
      <view class="weui-cell weui-cell_active" style="{{events ? 'display: none;' : ''}}">还没有添加过事件哦</view>
 </view>
 
@@ -66,6 +66,6 @@
 </view>
 
 <view class="ec-container_2">
-     <ec-canvas canvas-id="echart" ec="{{ec_tag2}}" style="{{events ? '' : 'display: none;'}}"></ec-canvas>
+     <ec-canvas canvas-id="echart" ec="{{ec_tag2}}"></ec-canvas>
      <view class="weui-cell weui-cell_active" style="{{events ? 'display: none;' : ''}}">还没有添加过事件哦</view>
 </view>
