--- a/frontend/pages/plan/all_plan/all_plan.wxml
+++ b/frontend/pages/plan/all_plan/all_plan.wxml
@@ -14,5 +14,5 @@
 
 <view id="placeHolder" style="height: 35px;"></view>
 <view id="bar"> 
-  <image src="/image/show/add.png" bind:tap="goToCreate"></image>
+  <image src="/image/show/add.png" style="width: 50px;height: 50px;" bind:tap="goToCreate"></image>
 </view>
