--- a/frontend/pages/show/seach_result/search_result.wxml
+++ b/frontend/pages/show/seach_result/search_result.wxml
@@ -1,5 +1,13 @@
 <!--pages/show/seach_result/search_result.wxml-->
 
+<view class="container_tag">
+  <view wx:for="{{tags}}" wx:key="index" 
+    data-index='{{index}}' 
+    class="tag {{item.checked ? 'selected' : ''}}" bindtap="toggleTag">
+    <text class="tag-text">{{item.info}}</text>
+  </view>
+</view>
+
 
 <view class="container">
   <view class="cards-container">
