--- a/frontend/pages/show/seach_result/search_result.wxss
+++ b/frontend/pages/show/seach_result/search_result.wxss
@@ -91,5 +91,69 @@
 }
 
 
+.tag-cont{
+  grid-area: 3/1/4/5;
+  width: 90vw;
+  height: 8vh;
+  justify-self: center ;
+}
+
+.container_tag{
+  grid-area: 3/1/4/5;
+  width: 90vw;
+  height: 8vh;
+  display: flex;
+  overflow: scroll;
+  flex-wrap: nowrap;
+  justify-self: center;
+  align-items: center; /* 标签垂直居中对齐 */
+  gap: 15px; /* 标签之间的间距 */
+}
+
+
+.tag-empty-tip{
+  color: #999;
+}
+
+/* 添加滚动条样式，这样滚动条就不可见了，但仍然可以滑动 */
+.container_tag::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+.container_tag::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.container_tag::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+.tag {
+  display: inline-block;
+  height: 5vw;
+  margin-left: 10px;
+  margin-right: -10px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  background: #f0f8ff;
+  border: 1rpx solid #4095E5;
+  border-radius: 10rpx;
+  font-size: 28rpx;
+  text-align: center;
+  color: #4095E5;
+  cursor: pointer;
+  white-space: nowrap; 
+}
+
+.tag.selected {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.tag .tag-text {
+  /* margin-bottom: 3px; */
+  font-size: 14px;
+}
+
 
 
