feat(front): add basic time filter in search detail page

--- a/frontend/pages/show/seach_result/search_result.wxml
+++ b/frontend/pages/show/seach_result/search_result.wxml
@@ -8,6 +8,9 @@
   </view>
 </view>
 
+<view  class="tag {{time ? 'selected' : ''}}" bindtap="toggleTimeTag">
+    <text class="tag-text">{{timeText}}</text>
+</view>
 
 <view class="container">
   <view class="cards-container">
