--- a/frontend/pages/generate/generate.wxss
+++ b/frontend/pages/generate/generate.wxss
@@ -283,3 +283,54 @@
   margin: 1vh;
   top: -15vh
 }
+
+.charm-title {
+  position: relative;
+  top: -220rpx;
+
+  color: #333333;
+  font-size: 18px;
+}
+
+.charm-container {
+  position: relative;
+  top: -180rpx;
+  width: 100%;
+}
+
+.charm-item {
+  position: relative;
+  height: 20vh;
+  margin-bottom: 3vh;
+  border: lightgray solid 2px;
+  border-radius: 15px;
+  overflow: hidden;
+  width: 80%;
+}
+
+.charm-to-right {
+  width: 80%;
+  left: 20%;
+}
+
+.charm-line {
+  position: relative;
+  top: -180rpx;
+  width: 100%;
+  height: 0;
+  border-top: 2px dashed lightgray;
+  margin-bottom: 3vh;
+}
+
+.charm-image {
+  height: 100%;
+  position: relative;
+  left: -10%;
+}
+
+.charm-info {
+  margin-top: calc(-180rpx - 1.5em);
+  position: absolute;
+  writing-mode: vertical-lr;
+  color: gray;
+}
