--- a/frontend/pages/generate/generate.wxss
+++ b/frontend/pages/generate/generate.wxss
@@ -318,7 +318,7 @@
   top: -180rpx;
   width: 100%;
   height: 0;
-  border-top: 2px dashed lightgray;
+  border-top: 1px solid #DDDDDD;
   margin-bottom: 3vh;
 }
 
