--- a/frontend/pages/plan/todo/todo.wxml
+++ b/frontend/pages/plan/todo/todo.wxml
@@ -3,7 +3,7 @@
 <!-- <view class='placeHolder'></view> -->
   <view class="container_todo">
   <view style="width: 100%;">
-    <image src="{{icon}}" style="height: 5vh; width: 5vh; top: 1.5vh; position: relative; margin-left: 2vh;"/>
+    <image src="{{icon}}" style="height: 4vh; width: 4vh; padding: 0.5vh; top: 1.5vh; position: relative; margin-left: 2vh;"/>
     <text class="todo-header"> {{planTitle}}</text>
     <image src="/image/plan/trash.png" style="height: 4vh; width: 4vh;opacity: 0.7; position: absolute; right: 1vh; top: 1.8vh; " bind:tap="deletePlan"/>
   </view>
@@ -11,9 +11,7 @@
     <view class="todo-list">
     <view class='plan-info'>
       <text class="today">{{today}}</text>
-      <text wx:for="{{childList}}" class="child">{{item}}
-            <!-- <text class="tag-text">{{item}}</text> -->
-            </text>
+      <text wx:for="{{childList}}" class="child">{{item}}</text>
     </view>
     
       <block wx:for="{{todoList}}" wx:key="task"  wx:for-index = "index">
