debug(front): hide excess text

--- a/frontend/components/text-card/text-card.wxss
+++ b/frontend/components/text-card/text-card.wxss
@@ -123,4 +123,12 @@
   /* border: 1px black solid; */
   font-size: 1em;
   text-align:left;
+
+  display: -webkit-box;
+  word-wrap: break-word;
+  overflow: hidden; /* 隐藏多余的文本 */
+  text-overflow: ellipsis; /* 使用省略号来表示溢出的文本 */
+  white-space: normal ;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
