--- a/frontend/pages/plan/create_plan/create_plan.wxml
+++ b/frontend/pages/plan/create_plan/create_plan.wxml
@@ -69,7 +69,7 @@
                         </view>
 						<view class="weui-cell__bd">
 							<!-- <input class="weui-input" placeholder="" disabled /> -->
-              <image  src="{{iconList[selected_icon_index]}}" style="position: relative; height: 5vh; width: 5vh; top: 0vh; left: 2vh;" />
+              <image  src="{{iconList[selected_icon_index]}}" style="position: relative; height: 3.5vh; width: 3.5vh; top: 0vh; left: 2vh;" />
 						</view>
 				</view>
         </view>
@@ -79,7 +79,7 @@
   
   <view  class="icon-container">
     <view wx:for="{{iconList}}" wx:key="index" data-index='{{index}}' class="icon-item{{index==selected_icon_index ? '-hover' : ''}} " bind:tap="iconChange" >
-    <image class="picker-icon" src="{{item}}" style="height: 8vw; width: 8vw;" />
+    <image class="picker-icon" src="{{item}}" />
   </view>
   </view>
 </view>
