--- a/frontend/pages/plan/create_plan/create_plan.wxss
+++ b/frontend/pages/plan/create_plan/create_plan.wxss
@@ -196,24 +196,33 @@
 }
 
 .icon-container {
-  margin-top: 2vh;
+  margin-top: 3vh;
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   /* margin-left: 1vh; */
   /* margin-right: 1vh; */
-  width: 100%;
+  /* justify-items: auto; */
+  /* align-items: center; */
+  width: 90%;
+  margin-left: 5%;
 }
 
 .icon-item {
-  margin-left: 1vh;
-  margin-right: 1vh;
-  margin-bottom: 1vh;
+  width: 5vh;
+  height: 5vh;
+  /* margin-left: 0.5vh; */
+  /* margin-right: 0.5vh; */
+  /* margin-bottom: 1vh; */
 }
 
 .icon-item-hover {
-  margin-left: 1vh;
-  margin-right: 1vh;
-  margin-bottom: 1vh;
+  width: 5vh;
+  height: 5vh;
+  align-items: center;
+  /* margin-left: 0.5vh; */
+  /* margin-right: 0.5vh; */
+  /* margin-bottom: 1vh; */
   background-color: rgba(187, 190, 190, 0.397);
   /* box-shadow: 2px 2px 6px rgb(141, 137, 137); */
   border-radius: 1vh;
@@ -221,8 +230,11 @@
 }
 
 .picker-icon {
-  height: 7vh;
-  width: 7vh;
+  position: relative;
+  margin-left: 1vh;
+  margin-top: 1vh;
+  height: 3vh;
+  width: 3vh;
 }
 .weui-form__control-area {
   margin: 0;
