--- a/frontend/user/pages/comments/comments.wxml
+++ b/frontend/user/pages/comments/comments.wxml
@@ -14,7 +14,6 @@
                               type="text"
                               placeholder="请输入"
                               placeholder-class="weui-input__placeholder"
-                              bindinput="handleInputTitle"
                           />
           </view>
         </view>
@@ -27,7 +26,7 @@
           </view>
           <!-- <textarea class="input_text" bindinput="handleInputText" placeholder="请输入" maxlength="1024"/> -->
           <view class="weui-cell__bd" style="margin-top: 2vh; font-size: 2vh;">
-                      <textarea class="weui-textarea" placeholder="请描述事件内容" placeholder-class="weui-input__placeholder" rows="3" bindinput="handleInputText"></textarea>
+                      <textarea class="weui-textarea" placeholder="请描述事件内容" placeholder-class="weui-input__placeholder" rows="3" ></textarea>
                       <!-- <view aria-role="option" class="weui-textarea-counter"><span>0</span>/200</view> -->
           </view>
 
@@ -77,7 +76,7 @@
                               type="text"
                               placeholder="我们将通过该电话联系您"
                               placeholder-class="weui-input__placeholder"
-                              bindinput="handleInputTitle"
+                              
                           />
           </view>
         </view>
