feat(front): user page add feat

--- a/frontend/pages/user/user.wxml
+++ b/frontend/pages/user/user.wxml
@@ -51,12 +51,12 @@
       <text class="item-text">孩子信息</text>
       <image class="image-arrow" src="/image/user/arrow.png"></image>
     </view>
-    <view class="line"></view>
+    <!-- <view class="line"></view>
     <view class="list-item" bindtap="goToPage_setting">
       <image class="item-image" src="/image/user/settings.png"></image>
       <text class="item-text">更多设置</text>
       <image class="image-arrow" src="/image/user/arrow.png"></image>
-    </view>
+    </view> -->
     <view class="line"></view>
     <view class="list-item" bindtap="goToPage_about_us">
       <image class="item-image" src="/image/user/about_us.png"></image>
